fix conda error

--- a/module2 Training model with Python and scikit-learn.ipynb
+++ b/module2 Training model with Python and scikit-learn.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5978a0ac",
    "metadata": {},
    "source": [
     "# Module2: Python と scikit-learn でのモデル学習とチューニング\n",
@@ -25,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1074655b",
    "metadata": {},
    "source": [
     "# Azure との接続\n",
@@ -46,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e28689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +54,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b190b6d2",
    "metadata": {},
    "source": [
     "## ワークスペースに接続\n",
@@ -74,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7cccd21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed32856b",
    "metadata": {},
    "source": [
     "## ワークスペース内の Azure Machine Learning のリソースを確認する\n",
@@ -99,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d255c89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +104,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e41766",
    "metadata": {},
    "source": [
     "## 学習用のスクリプトを作成する\n",
@@ -122,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73579361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da547a6",
    "metadata": {},
    "source": [
     "学習用のスクリプトを作成しフォルダに保存する準備ができました。\n",
@@ -151,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99163f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159585af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +212,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b6a7f9",
    "metadata": {},
    "source": [
     "# コンピューティングインスタンス上でモデル学習\n",
@@ -238,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f628e60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,29 +233,32 @@
     "from azureml.widgets import RunDetails\n",
     "\n",
     "# Create a Python environment for the experiment\n",
-    "sklearn_env = Environment(\"sklearn-env\")\n",
-    "\n",
+    "#sklearn_env = Environment(\"sklearn-env\")\n",
     "# Ensure the required packages are installed (we need pip, scikit-learn and Azure ML defaults)\n",
-    "packages = CondaDependencies.create(conda_packages=['pip', 'scikit-learn'],\n",
-    "                                    pip_packages=['azureml-defaults'])\n",
-    "sklearn_env.python.conda_dependencies = packages\n",
+    "#packages = CondaDependencies.create(conda_packages=['pip', 'scikit-learn'],\n",
+    "#                                    pip_packages=['azureml-defaults'])\n",
+    "#sklearn_env.python.conda_dependencies = packages\n",
+    "sklearn_env = Environment.from_conda_specification(\n",
+    "                                    name=\"sklearn_env\",\n",
+    "                                    file_path=\"sklearn-env.yml\")\n",
     "\n",
     "# Create a script config1\n",
     "script_config1 = ScriptRunConfig(source_directory=training_folder,\n",
     "                                script='diabetes_training.py',\n",
     "                                arguments = ['--reg_rate', 0.1],\n",
+    "                                compute_target='local',\n",
     "                                environment=sklearn_env) \n",
     "\n",
     "# Create a script config2\n",
     "script_config2 = ScriptRunConfig(source_directory=training_folder,\n",
     "                                script='diabetes_training.py',\n",
     "                                arguments = ['--reg_rate', 10],\n",
+    "                                compute_target='local',\n",
     "                                environment=sklearn_env)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a0e32cf7",
    "metadata": {},
    "source": [
     "準備が整いましたので、実行用のオブジェクトを **Experiment** から生成し、以下のように実行します。"
@@ -278,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "663216b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1887919",
    "metadata": {},
    "source": [
     "**Run** オブジェクトから指標や出力が取り出せます。"
@@ -305,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82360c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +306,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6785fd",
    "metadata": {},
    "source": [
     "それではもう一方の設定 *script_config2* を使って実行して比較してみましょう。"
@@ -329,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05a28dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40652a72",
    "metadata": {},
    "source": [
     "## 学習済みモデルを登録する\n",
@@ -366,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e236bd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +373,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129e6116",
    "metadata": {},
    "source": [
     "## ハイパーパラメータのチューニング\n",
@@ -404,7 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58deb256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +396,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f11d50b7",
    "metadata": {},
    "source": [
     "それではモデルを学習するためのスクリプトを作成します。この例でいは、*Gradient Boosting* アルゴリズムを採用し、分類モデルを学習します。学習用のスクリプトには以下の要件を満たす必要があります。\n",
@@ -427,7 +406,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6a8fa1",
    "metadata": {},
    "source": [
     "## データ準備\n",
@@ -438,7 +416,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20059d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b12d2cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +518,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea2154a",
    "metadata": {},
    "source": [
     "# コンピューティングクラスタ上で学習の並列実行\n",
@@ -558,7 +533,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "516fbbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +559,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ba7cab",
    "metadata": {},
    "source": [
     "## ハイパーパラメータチューニングの実験を実行\n",
@@ -599,7 +572,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492adc75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,29 +629,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c8d985",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "20bf69066c0dd38d51965b69d5e1b6e387082e3198ba56e97997ac55f4e50ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
-   "language": "python",
-   "name": "python38-azureml"
+   "display_name": "Python 3.8.2 64-bit ('usr')",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": ""
   }
  },
  "nbformat": 4,
