mask cluster name

--- a/module2 Training model with Python and scikit-learn.ipynb
+++ b/module2 Training model with Python and scikit-learn.ipynb
@@ -539,8 +539,7 @@
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "cluster_name = \"your-compute-cluster\" #cc-ym210625\n",
-    "cluster_name = \"cc-ym210625\"\n",
+    "cluster_name = \"your-compute-cluster\"\n",
     "\n",
     "try:\n",
     "    # Check for existing compute target\n",
