--- a/module3 deployment targets.ipynb
+++ b/module3 deployment targets.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a285c27c",
    "metadata": {},
    "source": [
     "# Module3: 様々な環境へのデプロイ\n",
@@ -28,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c07a56",
    "metadata": {},
    "source": [
     "# ACI を使ってリアルタイム推論サービスを作成する\n",
@@ -38,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3c1ab7",
    "metadata": {},
    "source": [
     "## ワークスペースへの接続\n",
@@ -49,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2069c2b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +59,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcc4d23",
    "metadata": {},
    "source": [
     "## モデルを Web サービスとしてデプロイ\n",
@@ -76,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777db601",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b531558",
    "metadata": {},
    "source": [
     "それではデプロイしたいモデルを取得しましょう。モデル名をしてした際、デフォルトでは最新のバージョンが返ってきます。"
@@ -104,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f82d414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f8199ae",
    "metadata": {},
    "source": [
     "取得したモデルをホストする Web サービスを作成します。これにはいくつかのスクリプトと設定ファイルが必要ですので、フォルダを作成し準備していきます。"
@@ -123,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8de135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e26db7",
    "metadata": {},
    "source": [
     "モデルをデプロイする Web サービスでは、入力データの読み込み、ワークスペースからモデルの取得、そして予測値を返すための Python コードが必要です。以下のように Web サービスにデプロイされる *entry script* (あるいは *scoring script*) に保存します。"
@@ -152,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047fec2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e41208fe",
    "metadata": {},
    "source": [
     "Web サービスはコンテナの中にホストされ、コンテナは初期化の際に　Python の必要なパッケージをインストールする必要があります。今回の推論コードでは **scikit-learn** が必要で、この情報を YAML ファイルでコンテナに与えます。"
@@ -195,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef06fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c3a2c03",
    "metadata": {},
    "source": [
     "以上でデプロイの準備が完了です。それでは **diabetes-service** と言うサービス名のコンテナをデプロイしましょう。デプロイのプロセスは以下の通りです。\n",
@@ -236,7 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d214941c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0738f1d",
    "metadata": {},
    "source": [
     "何事もなく **Healthy** と表示されているといいのですが、もし失敗している場合は以下のコードでトラブルシューティングのためのログが表示できます。"
@@ -269,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c657b88d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77637169",
    "metadata": {},
    "source": [
     "[Azure Machine Learning Studio](https://ml.azure.com) のワークスペースからエンドポイントのページを開き、デプロイされているサービスを表示してみましょう。\n",
@@ -292,7 +273,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eba9463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +282,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1676a92a",
    "metadata": {},
    "source": [
     "## Web サービスをコール\n",
@@ -313,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba06e258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a20b223",
    "metadata": {},
    "source": [
     "複数行のデータを推論することも可能です。"
@@ -344,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5b235d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc498d7f",
    "metadata": {},
    "source": [
     "上記のコードでは Azure Machine Learning SDK を使ってコンテナ化された Web サービスに接続し、学習済みモデルで予測値を生成しています。本番環境では、モデルは Azure Machine Learning SDK を使っていないビジネスアプリケーションから利用されるより、単純に HTTP リクエストで Web サービスを利用する方が一般的でしょう。\n",
@@ -378,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4f043f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +362,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3050b538",
    "metadata": {},
    "source": [
     "これでエンドポイントの URL が取得できましたので、HTTP リクエストを作成し、患者データを JSON 形式で送信し、予測カテゴリを取得します。"
@@ -397,7 +370,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546790fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +394,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2872489",
    "metadata": {},
    "source": [
     "これまでの処理で、認証を必要としない Web サービスを Azure Container Instance としてデプロイしました。開発・検証の環境であれば十分ですが、本番環境では Azure Kubernetes Services (AKS) クラスタへのデプロイとトークンベースの認証を検討すべきです。これは **Authorization** のヘッダーを含む　REST リクエストが要求されます。\n",
@@ -435,7 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100eaae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +415,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ae222a",
    "metadata": {},
    "source": [
     "# AKS を使って推論クラスタを作成\n",
@@ -460,7 +429,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26973920",
    "metadata": {},
    "source": [
     "## 推論クラスタにデプロイ\n",
@@ -473,14 +441,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461815fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from azureml.core.webservice import AksWebservice, Webservice\n",
     "from azureml.core.compute import AksCompute\n",
     "\n",
-    "cluster_name = \"aks-handson-demo\"#\"your-compute-cluster\"\n",
+    "cluster_name = \"your-compute-cluster\"\n",
     "service_name = \"aks-service\"\n",
     "\n",
     "aks_target = AksCompute(ws, cluster_name)\n",
@@ -497,7 +464,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5eed978",
    "metadata": {},
    "source": [
     "デプロイが成功していれば、**Healthy** と表示されるはずです。\n",
@@ -509,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4370f514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +520,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b8e6301",
    "metadata": {},
    "source": [
     "Azure Container Instance と同様の結果が得られたことが確認できました。\n",
@@ -565,7 +529,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698564fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +538,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e1fce7",
    "metadata": {},
    "source": [
     "また、AKS 自体は削除されていないので、クラスタ自体が不要な場合は忘れずに削除しましょう。"
@@ -584,7 +546,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bc40411",
    "metadata": {},
    "outputs": [],
    "source": []
