--- a/module2 Training model with Python and scikit-learn.ipynb
+++ b/module2 Training model with Python and scikit-learn.ipynb
@@ -580,12 +580,15 @@
     "#from azureml.widgets import RunDetails\n",
     "\n",
     "# Create a Python environment for the experiment\n",
-    "sklearn_env = Environment(\"sklearn-env\")\n",
+    "#sklearn_env = Environment(\"sklearn-env\")\n",
     "\n",
     "# Ensure the required packages are installed (we need scikit-learn, Azure ML defaults, and Azure ML dataprep)\n",
-    "packages = CondaDependencies.create(conda_packages=['scikit-learn','pip'],\n",
-    "                                    pip_packages=['azureml-defaults','azureml-dataprep[pandas]'])\n",
-    "sklearn_env.python.conda_dependencies = packages\n",
+    "#packages = CondaDependencies.create(conda_packages=['scikit-learn','pip'],\n",
+    "#                                    pip_packages=['azureml-defaults','azureml-dataprep[pandas]'])\n",
+    "#sklearn_env.python.conda_dependencies = packages\n",
+    "sklearn_env = Environment.from_conda_specification(\n",
+    "                                    name=\"sklearn_env\",\n",
+    "                                    file_path=\"sklearn-env-cc.yml\")\n",
     "\n",
     "# Get the training dataset\n",
     "diabetes_ds = ws.datasets.get(\"diabetes dataset\")\n",
