--- a/module2 Training model with Python and scikit-learn.ipynb
+++ b/module2 Training model with Python and scikit-learn.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Module2: Python と scikit-learn でのモデル学習とチューニング\n",
     "30分\n",
@@ -20,11 +19,11 @@
     "1. [コンピューティングクラスタ上で学習の並列実行](#コンピューティングクラスタ上で学習の並列実行)\n",
     "    1. [計算リソースの作成](#計算リソースの作成)\n",
     "    1. [ハイパーパラメータチューニングの実験を実行](#ハイパーパラメータチューニングの実験を実行)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Azure との接続\n",
     "## Notebooks から Azure Machine Learning を始める\n",
@@ -39,22 +38,22 @@
     "多くの Python コードが Notebook で実行でき、必要な Python パッケージがインストールされた環境で実行されます。今回の場合は、Azure Machine Learning コンピューティングインスタンス上の *Conda* 環境の中で Notebook を実行します。 この環境はデフォルトでインストールされており、データサイエンティストが普段の業務で利用する一般的な Python パッケージも含まれています。あわせて皆さんの Azure Machine Learning ワークスペース内のリソースを使用するための Azure Machine Learning Python SDK もインストールされています。\n",
     "\n",
     "下記のセルを実行することで、**azureml-core** パッケージをインポートし、インストールされている SDK のバージョンを確認してみましょう。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import azureml.core\n",
     "\n",
     "print(\"Ready to use Azure ML\", azureml.core.VERSION)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## ワークスペースに接続\n",
     "\n",
@@ -65,13 +64,12 @@
     "下記のコードでは設定ファイルを使ってワークスペースに接続します。\n",
     "\n",
     "> **注釈**: Notebook のセッションで初めてワークスペースに接続する際は、Azure にサインインするために以下の手順を求められるかもしれません。`https://microsoft.com/devicelogin`　へのリンクをクリックすし、自動的に生成されたコードを入力することでAzure にサインインします。無事 Azure にサインインした後、開かれているタブを閉じてこの Notebook に戻れます。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from azureml.core import Workspace\n",
     "\n",
@@ -79,43 +77,43 @@
     "print(ws.name, \"loaded\")\n",
     "\n",
     "!ls /config.json"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## ワークスペース内の Azure Machine Learning のリソースを確認する\n",
     "\n",
     "これでワークスペースと接続できましたので、リソースを使って作業をしてみましょう。例えば以下のコードを使ってワークスペース内のコンピューティングリソースを列挙することができます。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "print(\"Compute Resources:\")\n",
     "for compute_name in ws.compute_targets:\n",
     "    compute = ws.compute_targets[compute_name]\n",
     "    print(\"\\t\", compute.name, ':', compute.type)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 学習用のスクリプトを作成する\n",
     "\n",
     "ここでは Python スクリプトを用いて糖尿病のデータセットを基に機械学習のモデルを学習します。それではスクリプトとデータ用のフォルダを作成して初めていきましょう。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os, shutil\n",
     "\n",
@@ -125,24 +123,24 @@
     "\n",
     "# Copy the data file into the experiment folder\n",
     "shutil.copy('data/diabetes.csv', os.path.join(training_folder, \"diabetes.csv\"))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "学習用のスクリプトを作成しフォルダに保存する準備ができました。\n",
     "\n",
     "今回は学習の実験をより柔軟に実行できるように実装します。パラーメータをスクリプトに与えることで、設定を変えて同じスクリプトの学習実験を繰り返し実行できるようになります。ここではロジスティック回帰モデルを学習するらいに、正則化(regularization) の割合を表すハイパーパラメータを、スクリプトのパラメータとして与えます。\n",
     "\n",
     "> **注釈**: このコードはスクリプトを *作成* するものです。実行はされません！"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile $training_folder/diabetes_training.py\n",
     "# Import libraries\n",
@@ -198,35 +196,35 @@
     "joblib.dump(value=model, filename='outputs/diabetes_model.pkl')\n",
     "\n",
     "run.complete()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 出力されたスクリプトを確認\n",
     "!head $training_folder/diabetes_training.py"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# コンピューティングインスタンス上でモデル学習\n",
     "## 実験として学習スクリプトを実行する\n",
     "\n",
-    "これで実験としてスクリプトを実行する準備が整いました。デフォルトの環境には **scikit-learn** のパッケージがインストールされておらず、明示的に設定する必要がありますのでご注意下さい。 *condad* 環境は初めて環境を実行する際にオンデマンドで構築され、以降の実行時には同じ設定でキャッシュされています。そのため初回実行時のみ時間がかかるはずです。\n",
+    "これで実験としてスクリプトを実行する準備が整いました。デフォルトの環境には **scikit-learn** のパッケージがインストールされておらず、明示的に設定する必要がありますのでご注意下さい。 *conda* 環境は初めて環境を実行する際にオンデマンドで構築され、以降の実行時には同じ設定でキャッシュされています。そのため初回実行時のみ時間がかかるはずです。\n",
     "\n",
     "モデルのハイパーパラメータによって結果がどのように変化する確認できるよう、２種類の設定オブジェクトを準備しておきます。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from azureml.core import Experiment, ScriptRunConfig, Environment\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
@@ -255,20 +253,20 @@
     "                                arguments = ['--reg_rate', 10],\n",
     "                                compute_target='local',\n",
     "                                environment=sklearn_env)\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "準備が整いましたので、実行用のオブジェクトを **Experiment** から生成し、以下のように実行します。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# submit the experiment run\n",
     "experiment_name = 'mslearn-train-diabetes'\n",
@@ -280,20 +278,20 @@
     "\n",
     "# Block until the experiment run has completed\n",
     "run.wait_for_completion()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Run** オブジェクトから指標や出力が取り出せます。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Get logged metrics and files\n",
     "metrics = run.get_metrics()\n",
@@ -302,20 +300,20 @@
     "print('\\n')\n",
     "for file in run.get_file_names():\n",
     "    print(file)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "それではもう一方の設定 *script_config2* を使って実行して比較してみましょう。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# submit the experiment run\n",
     "experiment_name = 'mslearn-train-diabetes'\n",
@@ -335,22 +333,22 @@
     "print('\\n')\n",
     "for file in run.get_file_names():\n",
     "    print(file)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 学習済みモデルを登録する\n",
     "\n",
     "実験の出力には学習済みモデルのファイル(**diabetes_model.pkl**) も含まれています。このモデルを Azure Machine Learning ワークスペースに登録することで、モデルのバージョンを追跡したり後から取り出すことも可能になります。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from azureml.core import Model\n",
     "\n",
@@ -369,55 +367,55 @@
     "        prop = model.properties[prop_name]\n",
     "        print ('\\t',prop_name, ':', prop)\n",
     "    print('\\n')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## ハイパーパラメータのチューニング\n",
     "\n",
     "多くの機械学習のアルゴリズムはハイパーパラメータ(学習に影響するパラメータ値だが、学習データ自体から推定しないもの) を必要とします。例えばロジスティック回帰モデルを学習する場合は *regularization rate* というハイパーパラメータを使ってモデルのバイアスを軽減することができます。あるいは畳み込みニューラルネットワーク(CNN) の例だと、*learning rate* と*batch size* によって重み付けやミニバッチで処理するデータのサイズを制御することができます。ハイパーパラメータの決定はモデル学習のパフォーマンス、モデルの学習時間に強く影響します。一般的には複数の候補の組み合わせを試すことで適切な設定値を探します。\n",
     "\n",
     "今回は2つのハイパーパラメータを想定し分類モデルを学習します。しかし、この原理原則は Azure Machine Learning を用いたあらゆるモデル学習において適用することが可能です。また、より大規模なハイパーパラメータチューニングを想定し、コンピューティングクラスタを使った並列の実験を実行します。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "experiment_folder = 'diabetes_training-hyperdrive'\n",
     "os.makedirs(experiment_folder, exist_ok=True)\n",
     "\n",
     "print('Folder ready.')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "それではモデルを学習するためのスクリプトを作成します。この例でいは、*Gradient Boosting* アルゴリズムを採用し、分類モデルを学習します。学習用のスクリプトには以下の要件を満たす必要があります。\n",
     "\n",
     "- 最適化したいそれぞれのハイパーパラメータを引数に持つ(今回は*learning rate*とアルゴリズムの*estimator*の数です)\n",
     "- 最適化するための評価指標をログとして残すように実装(今回は AUC と　accuracy の両方を記録し、モデル選定の際にどちらも考慮できるようにしています)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## データ準備\n",
     "\n",
     "この実験では糖尿妙患者の詳細が含まれたデータセットを使います。下のセルを実行し、データセットを作成します。(既に存在している場合、既存のバージョンが使用されます)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from azureml.core import Dataset\n",
     "\n",
@@ -444,13 +442,13 @@
     "        print(ex)\n",
     "else:\n",
     "    print('Dataset already registered.')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile $experiment_folder/diabetes_training.py\n",
     "# Import libraries\n",
@@ -514,11 +512,12 @@
     "joblib.dump(value=model, filename='outputs/diabetes_model.pkl')\n",
     "\n",
     "run.complete()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# コンピューティングクラスタ上で学習の並列実行\n",
     "## 計算リソースの作成\n",
@@ -528,13 +527,12 @@
     "後述のコードで Azure Machine Learning コンピューティングクラスタを指定します。(まだ作成していなければ、新たに作成します)\n",
     "\n",
     "> **重要**: 下記のコードを実行する前に、 *your-compute-cluster* を任意のコンピューティングクラスタ名に変更して下さい。クラスター名はグローバルでユニークな必要があり、文字数を2-16の範囲で指定してください。有効な文字は英数字とハイフンです。"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
@@ -554,11 +552,12 @@
     "    except Exception as ex:\n",
     "        print(ex)\n",
     "    "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## ハイパーパラメータチューニングの実験を実行\n",
     "\n",
@@ -566,13 +565,12 @@
     "The run producing the best model (as determined by the logged target performance metric for which you want to optimize) can be identified, and its trained model selected for registration and deployment.\n",
     "\n",
     "> **注釈**: この例では early stopping policy は明記しません。(後略。詳細は原文をご覧ください)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#from azureml.core import Experiment, ScriptRunConfig, Environment\n",
     "#from azureml.core.conda_dependencies import CondaDependencies\n",
@@ -626,14 +624,16 @@
     "# Show the status in the notebook as the experiment runs\n",
     "RunDetails(run).show()\n",
     "run.wait_for_completion()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
